Downgraded to java 11